- Fix: Deleted Rooms not shown when editing a slot - Refactor: SlotModal uses Form - Refactor: SlotModal now responsive - Fix: SlotModal Chevron animation now working - Refactor: Improved Readability by deconstructing props attributes - Refactor: Improved Accessibility through added labels

--- a/src/components/modals/deleteModal/DeleteModal.css
+++ b/src/components/modals/deleteModal/DeleteModal.css
@@ -1,38 +1,8 @@
-.span-style{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    color: #82868B;
-}
-.modal-container{
-    background-color: #f5f5f5;
-    margin: -20px;
-    border-radius: 5px;
-    padding:5%;
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-size: 60%;
-    max-height: 90vh;
-    overflow-y: auto;
-}
-.modal-header{
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 2em;
-    border-color: #C1C1C1;
-}
-.modal-header-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 4%;
-}
 .modal-header-icon{
-    width: 10%;
-    height: 10%;
     color: #82868B;
+    height: 20px;
+    width: 20px;
 }
-
 
 .text-container{
     padding: 4%;
@@ -40,23 +10,19 @@
     align-items: center;
     text-align: center;
 }
-.delete-title-subheadline{
+.modal .delete-title-subheadline{
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 100;
-    font-size: 1.5em;
     color: #363A3F;
 }
 
-.footer{
+.modal .footer{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.confirm-button{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+.modal .confirm-button{
     margin-top: 20px;
     padding-left: 10%;
     padding-right: 10%;
@@ -66,6 +32,9 @@
     border-radius: 5px;
     border-style: none;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    color: #F5F5F5;
 }
 .confirm-text{
     font-family: 'Roboto', sans-serif;
