--- a/src/components/modals/participantModals/editMultipleModal/EditMultipleParticipantsModal.css
+++ b/src/components/modals/participantModals/editMultipleModal/EditMultipleParticipantsModal.css
@@ -34,6 +34,9 @@
 }
 
 .modal .save-button {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 100;
     margin-top: 50px;
     padding-left: 10%;
     padding-right: 10%;
@@ -75,4 +78,9 @@
     color: #82868B;
     height: 20px;
     width: 20px;
+}
+
+.modal .modal-title {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
 }
